--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/learning-lesson-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/learning-lesson-window.zul
@@ -69,6 +69,11 @@
 				</row>
 				<row sclass="form-grid-row" style="border: none; padding: 10px 30px 10px 30px;" hflex="1" >
 					<cell sclass="form-grid-cell" hflex="1" colspan="2" >
+						<intbox placeholder="${c:l('txt.ui.common.swimingMeters')}" value="@bind(fx.additionalColumnInt)" hflex="1" />
+					</cell>
+				</row>
+				<row sclass="form-grid-row" style="border: none; padding: 10px 30px 10px 30px;" hflex="1" >
+					<cell sclass="form-grid-cell" hflex="1" colspan="2" >
 						<textbox multiline="true" placeholder="${c:l('txt.ui.common.description')}" value="@bind(fx.description)" rows="5" hflex="1"/>
 					</cell>
 				</row>
