--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -36,7 +36,10 @@
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
 			            				<label value="${c:l('txt.ui.menu.courses')}" style="margin-right:5px;" />
-			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
+			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
+			            					sclass="btn-warning" 
+			            					iconSclass="z-icon-plus"
+			            					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
 			            			</hbox>
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
@@ -96,9 +99,9 @@
 			                	<button label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourse_${each.uuid}" >
-									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
+									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" visible="vm.isLoggedUserInRole('ADMIN')" />
 									<menuitem label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)"  />
+									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" visible="vm.isLoggedUserInRole('ADMIN')"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
