--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -62,6 +62,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="1"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -82,6 +83,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="2"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -102,6 +104,8 @@
 						                            		maxlength="@load(vm.getDateMaxlength())"
 						                            		placeholder="*"
 						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+						                            		readonly="@load(vm.isItemReadOnly())"
+						                            		buttonVisible="@load(!vm.isItemReadOnly())"
 						                            		tabindex="3" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
@@ -111,7 +115,7 @@
 													</vbox>
 												</cell>
 											</row>
-											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" visible="@load(vm.isLoggedUserInRole('ADMIN'))" >
 												<cell sclass="form-grid-cell">
 													<vbox hflex="1">
 														<label value="${c:l('txt.ui.common.birthNumber')}"/>
@@ -141,6 +145,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="5"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -157,6 +162,7 @@
 														<label value="${c:l('txt.ui.application.healthInfo')}"/>
 														<textbox rows="3" hflex="3" multiline="true"
 															value="@bind(fx.participant.courseParticipant.healthInfo)" tabindex="6"
+															readonly="@load(vm.isItemReadOnly())"
 															sclass="form-input-textarea"
 															maxlength="@load(vm.getHealthInfoMaxlength())" />
 													</vbox>
@@ -182,6 +188,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="7"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -203,6 +210,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="8"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -224,6 +232,7 @@
 															placeholder="*"
 															sclass="form-input-text"
 															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															readonly="@load(vm.isItemReadOnly())"
 															tabindex="9"
 															hflex="1" />
 														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -241,6 +250,7 @@
 														<label value="${c:l('txt.ui.common.phone')} 2:"/>
 														<textbox id="representativePhone2" 
 															value="@bind(fx.participant.courseParticRepresentative.contact.phone2)"
+															readonly="@load(vm.isItemReadOnly())"
 															maxlength="@load(vm.getPhoneMaxlength())"
 															sclass="form-input-text"
 															tabindex="10"
@@ -263,6 +273,7 @@
 																placeholder="*"
 																sclass="form-input-text"
 																tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+																readonly="@load(vm.isItemReadOnly())"
 																tabindex="11"
 																hflex="1" />
 														</hbox>
@@ -281,6 +292,7 @@
 														<label value="${c:l('txt.ui.common.email')} 2"/>
 														<textbox id="representativeEmail2" 
 															value="@bind(fx.participant.courseParticRepresentative.contact.email2) @validator(vm.emailValidator)"
+															readonly="@load(vm.isItemReadOnly())"
 															maxlength="@load(vm.getEmailMaxlength())"
 															sclass="form-input-text"
 															tabindex="12"
@@ -386,6 +398,7 @@
 							<vbox>
 								<button label="Uložit"
 									onClick="@command('submit')" 
+									visible="@load(!vm.isItemReadOnly())"
 									iconSclass="z-icon-check" />
 							</vbox>
 						</hbox>
