--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -1,6 +1,7 @@
 <?page title="${c:l('txt.ui.organization.name')} - ${c:l('txt.ui.common.participants')}"?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
+<?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
 	<div self="@{define(mainContent)}" hflex="1" >
@@ -25,7 +26,9 @@
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseparticipant.vm.CourseParticipantListVM')">
+			<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseparticipant.vm.CourseParticipantListVM')" 
+				validationMessages="@id('vmsgs')"
+	    		form="@id('fx') @load(vm) @save(vm, before='submit')" >
 				
 				<listbox model="@load(vm.courseParticipantList)"
 					id="courseParticipantList"
@@ -39,10 +42,15 @@
 			            <auxheader class="header" colspan="5" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox>
-				            			<vbox>
-				            				<label value="${c:l('txt.ui.common.participants')}" />
-										</vbox>
+			            			<hbox vflex="1" align="center">
+			            				<label value="${c:l('txt.ui.common.participants')}" /> 
+			            				<button label="${c:l('txt.ui.common.newCourseParticipant')}" 
+			            					tooltiptext="@load(vm.newCourseParticipantButtonText)"
+			            					popup="newParticipantPopup" 
+			            					sclass="btn-warning" 
+			            					iconSclass="z-icon-plus"
+			            					style="margin-left: 5px;"
+			            					visible="@load(vm.courseApplicationAllowed)" />
 			            			</hbox>
 			            		</vbox>
 							</hbox>
@@ -76,6 +84,136 @@
 			            </listitem>
 			        </template>
 			    </listbox>
+			    
+			    <popup id="newParticipantPopup">
+					<!-- Ucastnik -->
+					<grid hflex="1" sclass="form-grid" style="border: none;" >
+						<columns>
+			                <column align="center" hflex="1" />
+			            </columns>
+						<rows style="background: white;" >
+							<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
+								<cell sclass="form-grid-cell" >
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.common.firstname')}"/>
+										<textbox id="particFirstname" 
+											maxlength="@load(vm.getFirstnameMaxlength())"
+											value="@bind(fx.newCourseParticipant.contact.firstname) @validator(vm.notNullValidator)"
+											placeholder="*"
+											sclass="form-input-text"
+											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+											tabindex="1"
+											hflex="1" />
+										<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
+												<label value="@bind(vmsgs[particFirstname])" />
+											</span>
+										</hbox>
+									</vbox>
+								</cell>
+							</row>
+							<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+								<cell sclass="form-grid-cell">
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.common.surname')}"/>
+										<textbox id="particSurname"
+											value="@bind(fx.newCourseParticipant.contact.surname) @validator(vm.notNullValidator)"
+											maxlength="@load(vm.getSurnameMaxlength())"
+											placeholder="*"
+											sclass="form-input-text"
+											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+											tabindex="2"
+											hflex="1" />
+										<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
+												<label value="@bind(vmsgs[particSurname])" />
+											</span>
+										</hbox>
+									</vbox>
+								</cell>
+							</row>
+							<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+								<cell sclass="form-grid-cell">
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.common.birthDate')}"/>
+										<datebox id="particBirthdate"
+											value="@bind(fx.newCourseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+		                            		format="@load(vm.dateFormat)" 
+		                            		maxlength="@load(vm.getDateMaxlength())"
+		                            		placeholder="*"
+		                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+		                            		tabindex="3" />
+										<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
+													<label value="@bind(vmsgs[particBirthdate])" />
+												</span>
+										</hbox>
+									</vbox>
+								</cell>
+							</row>
+							<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
+								<cell sclass="form-grid-cell">
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.common.birthNumber')}"/>
+										<textbox id="particBirthNumber"
+											value="@bind(fx.newCourseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+		                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+		                            		placeholder="*"
+		                            		sclass="form-input-text"
+		                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+		                            		tabindex="4"
+		                            		hflex="1" />
+										<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+												<label value="@bind(vmsgs[particBirthNumber])" />
+											</span>
+										</hbox>
+									</vbox>
+								</cell>
+							</row>
+							<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+								<cell sclass="form-grid-cell">
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.common.healthInsurance')}"/>
+										<textbox id="particHealthInsurance"
+											value="@bind(fx.newCourseParticipant.healthInsurance) @validator(vm.notNullValidator)"
+											maxlength="@load(vm.getHealthInsuranceMaxlength())"
+											placeholder="*"
+											sclass="form-input-text"
+											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+											tabindex="5"
+											hflex="1" />
+										<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
+												<label value="@bind(vmsgs[particHealthInsurance])" />
+											</span>
+										</hbox>
+									</vbox>
+								</cell>
+							</row>
+							<row sclass="form-grid-row" style="border: none; padding: 0px 30px 20px 30px;">
+								<cell sclass="form-grid-cell">
+									<vbox hflex="1">
+										<label value="${c:l('txt.ui.application.healthInfo')}"/>
+										<textbox rows="3" hflex="3" multiline="true"
+											value="@bind(fx.newCourseParticipant.healthInfo)" tabindex="6"
+											sclass="form-input-textarea"
+											maxlength="@load(vm.getHealthInfoMaxlength())" />
+									</vbox>
+								</cell>
+							</row>
+						</rows>
+					</grid>
+					<hbox style="margin-bottom: 10px;" hflex="1" pack="center" >
+						<button label="Odeslat" onClick="@command('submit', popup=newParticipantPopup)" iconSclass="z-icon-check" />
+					</hbox>
+					<script type="text/javascript">
+				        zk.afterMount(function() {
+				            jq("$particBirthNumber").mask("999999/9999");
+				        });
+				    </script>
+				</popup>
+			    
 			</vbox>
 			
 			<vbox hflex="1" />
