--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -28,7 +28,7 @@
 			
 			<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseparticipant.vm.CourseParticipantListVM')" 
 				validationMessages="@id('vmsgs')"
-	    		form="@id('fx') @load(vm) @save(vm, before='submit')" >
+	    		form="@id('fx') @load(vm.newCourseParticipant) @save(vm.newCourseParticipant, before='submit')" >
 				
 				<listbox model="@load(vm.courseParticipantList)"
 					id="courseParticipantList"
@@ -98,7 +98,7 @@
 										<label value="${c:l('txt.ui.common.firstname')}"/>
 										<textbox id="particFirstname" 
 											maxlength="@load(vm.getFirstnameMaxlength())"
-											value="@bind(fx.newCourseParticipant.contact.firstname) @validator(vm.notNullValidator)"
+											value="@bind(fx.contact.firstname) @validator(vm.notNullValidator)"
 											placeholder="*"
 											sclass="form-input-text"
 											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
@@ -117,7 +117,7 @@
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.common.surname')}"/>
 										<textbox id="particSurname"
-											value="@bind(fx.newCourseParticipant.contact.surname) @validator(vm.notNullValidator)"
+											value="@bind(fx.contact.surname) @validator(vm.notNullValidator)"
 											maxlength="@load(vm.getSurnameMaxlength())"
 											placeholder="*"
 											sclass="form-input-text"
@@ -137,7 +137,7 @@
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.common.birthDate')}"/>
 										<datebox id="particBirthdate"
-											value="@bind(fx.newCourseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+											value="@bind(fx.birthdate) @validator(vm.notNullObjectValidator)"
 		                            		format="@load(vm.dateFormat)" 
 		                            		maxlength="@load(vm.getDateMaxlength())"
 		                            		placeholder="*"
@@ -156,7 +156,7 @@
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.common.birthNumber')}"/>
 										<textbox id="particBirthNumber"
-											value="@bind(fx.newCourseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+											value="@bind(fx.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
 		                            		maxlength="@load(vm.getBirthNumberMaxlength())"
 		                            		placeholder="*"
 		                            		sclass="form-input-text"
@@ -176,7 +176,7 @@
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.common.healthInsurance')}"/>
 										<textbox id="particHealthInsurance"
-											value="@bind(fx.newCourseParticipant.healthInsurance) @validator(vm.notNullValidator)"
+											value="@bind(fx.healthInsurance) @validator(vm.notNullValidator)"
 											maxlength="@load(vm.getHealthInsuranceMaxlength())"
 											placeholder="*"
 											sclass="form-input-text"
@@ -196,7 +196,7 @@
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.application.healthInfo')}"/>
 										<textbox rows="3" hflex="3" multiline="true"
-											value="@bind(fx.newCourseParticipant.healthInfo)" tabindex="6"
+											value="@bind(fx.healthInfo)" tabindex="6"
 											sclass="form-input-textarea"
 											maxlength="@load(vm.getHealthInfoMaxlength())" />
 									</vbox>
