--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -37,7 +37,7 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="8" >
+			            <auxheader class="header" colspan="4" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
@@ -75,30 +75,30 @@
 								value="@bind(vm.filter.courseParticName)"
 								onChange="@command('filterDomCmd')" />
 						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								instant="true"
-								value="@bind(vm.filter.birthDate)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								instant="true"
-								value="@bind(vm.filter.courseParticRepresentative)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								instant="true"
-								value="@bind(vm.filter.phone)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								instant="true"
-								value="@bind(vm.filter.email)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
+<!-- 						<auxheader class="filter"> -->
+<!-- 							<textbox hflex="1"  -->
+<!-- 								instant="true" -->
+<!-- 								value="@bind(vm.filter.birthDate)" -->
+<!-- 								onChange="@command('filterDomCmd')" /> -->
+<!-- 						</auxheader> -->
+<!-- 						<auxheader class="filter"> -->
+<!-- 							<textbox hflex="1"  -->
+<!-- 								instant="true" -->
+<!-- 								value="@bind(vm.filter.courseParticRepresentative)" -->
+<!-- 								onChange="@command('filterDomCmd')" /> -->
+<!-- 						</auxheader> -->
+<!-- 						<auxheader class="filter"> -->
+<!-- 							<textbox hflex="1"  -->
+<!-- 								instant="true" -->
+<!-- 								value="@bind(vm.filter.phone)" -->
+<!-- 								onChange="@command('filterDomCmd')" /> -->
+<!-- 						</auxheader> -->
+<!-- 						<auxheader class="filter"> -->
+<!-- 							<textbox hflex="1"  -->
+<!-- 								instant="true" -->
+<!-- 								value="@bind(vm.filter.email)" -->
+<!-- 								onChange="@command('filterDomCmd')" /> -->
+<!-- 						</auxheader> -->
 						<auxheader class="filter">
 							<textbox hflex="1" 
 								instant="true"
@@ -123,10 +123,10 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(courseParticipant.contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
-			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" />
+<!-- 			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" /> -->
+<!-- 			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" /> -->
+<!-- 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" /> -->
+<!-- 			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" /> -->
 			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.payed')}" sort="auto(payed)" align="center" hflex="min" />
 			            <listheader width="50px" align="center" />
@@ -135,10 +135,10 @@
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.courseParticRepresentative.contact.email1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+<!-- 			                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
+<!-- 			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
+<!-- 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
+<!-- 			                <listcell label="${each.courseParticRepresentative.contact.email1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
 			                <listcell label="${each.courseParticipant.getInCourseInfo()}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
 		            			<checkbox checked="@load(each.payed)"
