--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -220,7 +220,28 @@
 				                <column align="center" hflex="1" />
 				            </columns>
 							<rows style="background: white;" >
-								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
+								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;">
+									<cell sclass="form-grid-cell">
+										<vbox hflex="1">
+											<label value="${c:l('txt.ui.common.birthNumber')}"/>
+											<textbox id="particBirthNumber" readonly="@load(!vm.editMode)"
+												value="@bind(fx.application.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+			                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+			                            		placeholder="*"
+			                            		sclass="form-input-text"
+			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+			                            		onChange="@command('validateUniquePersonalNumberCmd', personal_number=self.value, fx=fx)"
+			                            		tabindex="7"
+			                            		hflex="1" />
+											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+													<label value="@bind(vmsgs[particBirthNumber])" />
+												</span>
+											</hbox>
+										</vbox>
+									</cell>
+								</row>
+								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
 									<cell sclass="form-grid-cell" >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.firstname')}"/>
@@ -230,7 +251,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="7"
+												tabindex="8"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
@@ -250,7 +271,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="8"
+												tabindex="9"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
@@ -270,7 +291,7 @@
 												value="@bind(fx.application.courseParticipant.contact.street)"
 												maxlength="240"
 												sclass="form-input-text"
-												tabindex="9"
+												tabindex="10"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 											</hbox>
@@ -290,7 +311,7 @@
 														constraint="no empty"
 														sclass="form-input-text"
 														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-														tabindex="10"
+														tabindex="11"
 														hflex="1" />
 												</vbox>
 												<vbox>
@@ -366,26 +387,6 @@
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
 														<label value="@bind(vmsgs[particBirthdate])" />
 													</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
-									<cell sclass="form-grid-cell">
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.birthNumber')}"/>
-											<textbox id="particBirthNumber" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
-			                            		maxlength="@load(vm.getBirthNumberMaxlength())"
-			                            		placeholder="*"
-			                            		sclass="form-input-text"
-			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-			                            		tabindex="15"
-			                            		hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
-													<label value="@bind(vmsgs[particBirthNumber])" />
-												</span>
 											</hbox>
 										</vbox>
 									</cell>
